--- a/personal portfolio.html
+++ b/personal portfolio.html
@@ -25,11 +25,11 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link
+    <!-- <link
       rel="shortcut icon"
       href="https://i.ibb.co/ZYf9SGy/favicon-16x16.png"
       type="image/x-icon"
-    />
+    /> -->
     <link rel="stylesheet" href="personal portfolio.css" />
     <title>Sri Hari's Portfolio Website</title>
   </head>
