--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       href="https://i.ibb.co/ZYf9SGy/favicon-16x16.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="personal portfolio.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>Sri Hari's Portfolio Website</title>
   </head>
 
@@ -331,6 +331,6 @@
     </section>
 
     <!---custom js link--->
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
